# joystick2redis

./: .gitmodules  CMakeLists.txt  README.md  joystick2redis.json  upd.sh
src/: Joystick.cpp  Joystick.h  Main.cpp  config.cpp  deploy.sh  joystick2redis.cpp  joystick2redis.json  joystick2redis.service
